--- a/Labo_5/Opdracht_6/Style/style.css
+++ b/Labo_5/Opdracht_6/Style/style.css
@@ -16,7 +16,7 @@ h3 {
     font-size: 1.4em;
 }
 
-/* imes New Roman voor alle paragrafen */
+/* Times New Roman voor alle paragrafen */
 p {
     font-family: 'Times New Roman', serif;
     font-size: 1.2em;
