--- a/Labo_7/Opdracht_3/style/style.css
+++ b/Labo_7/Opdracht_3/style/style.css
@@ -25,23 +25,23 @@ h2{
     align-items: center;
 }
 
-.Vrienden table {
+.vrienden table {
     border-collapse: collapse;
     text-align: center;
     width: 100%;
 }
 
-.Vrienden {
+.vrienden {
     background: #35363AFF;
     overflow: hidden;
     border: 3px solid #FF0000;
 }
 
-.Vrienden table td, .datagrid table th {
+.vrienden table td, .datagrid table th {
     padding: 6px 4px;
 }
 
-.Vrienden table thead th {
+.vrienden table thead th {
     background-color: #FF0000;
     color: #DED4D4;
     font-size: 20px;
@@ -49,18 +49,18 @@ h2{
     padding: 10px 10px;
 }
 
-.Vrienden table tbody td {
+.vrienden table tbody td {
     color: #DED4D4;
     border-left: 5px solid #ff0000;
     font-size: 15px;
     font-weight: normal;
 }
 
-.Vrienden table tbody td:first-child {
+.vrienden table tbody td:first-child {
     border-left: none;
 }
 
-.Vrienden table tbody tr:last-child td {
+.vrienden table tbody tr:last-child td {
     border-bottom: none;
 }
 
@@ -71,7 +71,7 @@ h2{
     width: 100%;
 }
 
-.Vrienden table tbody .alt td {
+.vrienden table tbody .alt td {
     background: #8D2C2BFF;
     color: #DED4D4;
 }
