--- a/Labo_7/Opdracht_2/style/style.css
+++ b/Labo_7/Opdracht_2/style/style.css
@@ -7,7 +7,7 @@ footer{
     text-align: center;
 }
 
-h1{
+h1, .titel{
     text-align: center;
     border-bottom: 6px solid red;
     font-size: xxx-large;
