--- a/Labo_7/Kalender/style/style.css
+++ b/Labo_7/Kalender/style/style.css
@@ -2,6 +2,10 @@ footer{
     text-align: center;
 }
 
+h2{
+    text-align: center;
+}
+
 .center {
     display: flex;
     justify-content: center;
