--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body{
     color: #ded4d4;
     font-family: sans-serif;
 }
-h1{
+h1, h2{
     text-align: center;
     border-bottom: 6px solid red;
     font-size: xxx-large;
