--- a/style/style.css
+++ b/style/style.css
@@ -5,10 +5,17 @@ body{
     color: #ded4d4;
     font-family: sans-serif;
 }
-h1, h2{
+h1{
     text-align: center;
     border-bottom: 6px solid red;
     font-size: xxx-large;
+    font-weight: bold;
+}
+
+h2{
+    text-align: center;
+    border-bottom: 6px solid red;
+    font-size: xx-large;
     font-weight: bold;
 }
 
