--- a/Labo_8/Opdracht_Cocktailbar/style/style.css
+++ b/Labo_8/Opdracht_Cocktailbar/style/style.css
@@ -6,8 +6,7 @@ body {
 }
 
 header img {
-    max-width: 100%;
-    height: auto;
+    margin-top: -100px;
 }
 
 div {
@@ -16,7 +15,7 @@ div {
 
 .right {
     border: 1px solid #007e7e;
-    margin: 10px;
+    margin: 0 10px;
     background-image: url("../images/cocktail.gif");
     background-position: top center;
     background-repeat: repeat-x;
@@ -36,7 +35,6 @@ div {
 }
 
 .right h2, .right h1, .right p, .right a {
-    padding: 10px;
     color: #007e7e;
 }
 
@@ -45,7 +43,7 @@ div {
 }
 
 .left {
-    margin: 10px;
+    margin: 0 10px;
     text-align: left;
     width: 70%;
 }
