--- a/Labo_11/Beginsituatie/style/style.css
+++ b/Labo_11/Beginsituatie/style/style.css
@@ -84,33 +84,65 @@
 
     .item-1 {
         background: #b03532;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
     }
     .item-2 {
         background: #33a8a5;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 2;
+        grid-column-end: 3;
     }
     .item-3 {
         background: #30997a;
-        grid-row-start: 3;
-        grid-row-end: 4;
+        grid-row-start: 1;
+        grid-row-end: 2;
         grid-column-start: 3;
         grid-column-end: 4;
     }
     .item-4 {
         background: #6a478f;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 1;
+        grid-column-end: 2;
     }
     .item-5 {
         background: #da6f2b;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 2;
+        grid-column-end: 3;
     }
     .item-6 {
         background: #3d8bb1;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        grid-column-start: 3;
+        grid-column-end: 4;
     }
     .item-7 {
         background: #e03f3f;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 1;
+        grid-column-end: 2;
     }
     .item-8 {
         background: #59a627;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 2;
+        grid-column-end: 3;
     }
     .item-9 {
         background: #4464a1;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        grid-column-start: 3;
+        grid-column-end: 4;
     }
 }
