--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,10 @@ h1{
     font-weight: bold;
 }
 
+h5{
+    text-align: center;
+}
+
 .center h2{
     text-align: center;
     border-bottom: 6px solid red;
