--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ body{
     background-color: #35363a;
     color: #ded4d4;
     font-family: sans-serif;
+    text-align: center;
 }
 h1{
     text-align: center;
