--- a/Labo_17/Formvalidatie/styles/style.css
+++ b/Labo_17/Formvalidatie/styles/style.css
@@ -6,6 +6,7 @@ body{
     color: #ded4d4;
     font-family: sans-serif;
     text-align: center;
+    margin: 0 auto;
 }
 h1{
     text-align: center;
